--- a/1.html
+++ b/1.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ข้อ1</title>
+    <meta charset='utf-8'>
 </head>
 <body>
     <form>
-        <p>ชื่อเต็ม/ย่อของสาขาวิชา</p> <br>
-        <select>
-            <option> 1</option>
-        </select>
+        <h>ชื่อเต็ม/ย่อของสาขาวิชา</h>
+        <input type="text"></input><br>
+        <h>จำนวนเงินที่ต้องโอน</h>
+        <input type="number"></input><br>
+        <h>อาหารที่ชอบ</h>
+        <input type="checkbox"></input><br>
+        <h>ค่าไฟ</h>
+        <input type="number"></input><br>
+        <h>รหัสบัตรประชาชน</h>
+        <input type="text"></input><br>
+        <h>ความพึ่งพอใจในหนังสือเล่มนี้</h>
+        <input type="range"></input><br>
+        <h>อาการป่วย</h>
+        <input type="text"></input><br>
+        <h>ในช่วง 3 เดือนที่ผ่านมา เคยได้รับวัคซีนหรือไม่</h>
+        <input type="radio"></input><br>
+        <h>รหัสผ่าน</h>
+        <input type="password"></input><br>
+        <h>เวลาเริ่มเข้าเรียนและสิ้นสุดการเรียน</h>
+        <input type="date"></input><input type="date"></input><br>
+        <h>วันที่ต้องไปพบแพทย์</h>
+        <input type="datetime-local"></input><br>
     </form>
 </body>
 </html>
